sbi-manifests/sbi-cms-platform-go-exchange-rate-mapper/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-platform-go-exchange-rate-mapper
  namespace: sbi
  labels:
    app: sbi-cms-platform-go-exchange-rate-mapper
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-platform-go-exchange-rate-mapper
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-platform-go-exchange-rate-mapper
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 6f92a769cb0b93a711af5c2c65d47ed039b402e3cbe8245c1c0e577f395649fa
    spec:
      serviceAccountName: sbi-cms-platform-go-exchange-rate-mapper-sa
      volumes:
        - name: key-cert-vol
          configMap:
            name: public-private-key
        - name: visa-npci-key-configmap-volume
          configMap:
            name: visa-npci-key-configmap
        - name: dcms-keys-volume
          configMap:
            name: dcms-keys-configmap
        - name: sbi-keys-volume
          configMap:
            name: sbi-keys-configmap
      containers:
        - name: sbi-cms-platform-go-exchange-rate-mapper
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-platform-go-exchange-rate-mapper:sbi-uat.v19
          volumeMounts:
            - name: key-cert-vol
              mountPath: /config
            - name: visa-npci-key-configmap-volume
              mountPath: /data
            - name: dcms-keys-volume
              mountPath: /vol
            - name: sbi-keys-volume
              mountPath: /sbi
          ports:
            - containerPort: 5522
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
