sbi-manifests/sbi-cms-platform-go-exchange-rate-mapper/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-platform-go-exchange-rate-mapper
  namespace: sbi
  labels:
    app: sbi-cms-platform-go-exchange-rate-mapper
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '5522-5522'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 5522
      targetPort: 5522
      name: 5522-5522
  selector:
    app: sbi-cms-platform-go-exchange-rate-mapper
  type: ClusterIP
